src/test/deca/context/invalid/declClass-extendsImpossible.context
declClass-extendsImpossible.deca:1: